language/move-lang/tests/move_check/translated_ir_tests/move/signer/read_ref.exp
error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/translated_ir_tests/move/signer/read_ref.move:3:9
  │
2 │     fun t(s: &signer): signer {
  │               ------ The type 'signer' does not have the ability 'copy'
3 │         *s
  │         ^^ Invalid dereference. Dereference requires the 'copy' ability

