language/move-lang/tests/move_check/translated_ir_tests/move/signer/read_ref.move
module M {
    fun t(s: &signer): signer {
        *s
    }
}

// check: READREF_RESOURCE_ERROR
